# time_prototype_mamba

./: LICENSE  README.md  pyproject.toml
configs/: tpm_full_template.yaml  tpm_synthetic.yaml
data/synthetic/: manifest.json  train_manifest.json  val_manifest.json
data/synthetic/arrays/: synthetic_000_cbct.npz  synthetic_000_ct.npz  synthetic_001_cbct.npz  synthetic_001_ct.npz  synthetic_002_cbct.npz  synthetic_002_ct.npz  synthetic_003_cbct.npz  synthetic_003_ct.npz  synthetic_004_cbct.npz  synthetic_004_ct.npz  synthetic_005_cbct.npz  synthetic_005_ct.npz  synthetic_006_cbct.npz  synthetic_006_ct.npz  synthetic_007_cbct.npz  synthetic_007_ct.npz  synthetic_008_cbct.npz  synthetic_008_ct.npz  synthetic_009_cbct.npz  synthetic_009_ct.npz  synthetic_010_cbct.npz  synthetic_010_ct.npz  synthetic_011_cbct.npz  synthetic_011_ct.npz  synthetic_012_cbct.npz  synthetic_012_ct.npz  synthetic_013_cbct.npz  synthetic_013_ct.npz  synthetic_014_cbct.npz  synthetic_014_ct.npz  synthetic_015_cbct.npz  synthetic_015_ct.npz  synthetic_016_cbct.npz  synthetic_016_ct.npz  synthetic_017_cbct.npz  synthetic_017_ct.npz  (+13 more)
examples/: evaluate_checkpoint.py  make_synthetic_dataset.py  train_synthetic.py
tests/: test_smoke.py
time_prototype_mamba/: __init__.py
time_prototype_mamba/data/: __init__.py  dataset.py  synthetic.py
time_prototype_mamba/models/: __init__.py  encoder.py  prototype.py  temporal.py  time_prototype.py
time_prototype_mamba/training/: __init__.py  evaluate.py  losses.py  metrics.py  train.py
time_prototype_mamba/utils/: __init__.py  reproducibility.py
