[project]
name = "time-prototype-mamba"
version = "0.1.0"
description = "Time-Prototype Mamba for longitudinal radiotherapy imaging"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Time-Prototype Mamba Contributors" }
]
dependencies = [
    "mamba-ssm>=2.2.0",
    "monai>=1.3.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "torch>=2.9,<2.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["time_prototype_mamba*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.extra-build-dependencies]
mamba-ssm = ["torch"]
